syntax = "proto3";

package urlshortener;

option go_package = "github.com/Igor-makeev/mfuss";

import "google/protobuf/empty.proto";

message ShortRequest {
  string url = 1;
}

message ShortResponse {
  string id = 1;
  string url = 2;
  string short_url = 3;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  string id = 1;
  string url = 2;
  string short_url = 3;
}

message GetLinksResponse {
  message Link {
    string id = 1;
    string url = 2;
    string short_url = 3;
  }
  repeated Link links = 1;
}

message BatchShortRequest {
  message Link {
    string url = 1;
    string correlation_id = 2;
  }
  repeated Link links = 1;
}

message BatchShortResponse {
  message Link {
    string id = 1;
    string url = 2;
    string short_url = 3;
    string correlation_id = 4;
  }
  repeated Link links = 1;
}

message DeleteRequest {
  repeated string ids = 1;
}

message GetStatsResponse {
  uint64 links = 1;
  uint64 users = 2;
}

service Shortener {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Short(ShortRequest) returns (ShortResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetLinks(google.protobuf.Empty) returns (GetLinksResponse);
  rpc BatchShort(BatchShortRequest) returns (BatchShortResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc GetStats(google.protobuf.Empty) returns (GetStatsResponse);
}